ENH: add example predictions to TensorBoard

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -18,12 +18,14 @@
     "from collections import namedtuple\n",
     "import concurrent.futures\n",
     "import hashlib\n",
+    "import io\n",
     "from pathlib import Path\n",
     "import time\n",
     "from typing import Dict, Optional\n",
     "\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.gridspec as gridspec\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
@@ -64,33 +66,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_DIR = utils.package_dir() / 'data'/ 'ch10'\n",
-    "LOG_DIR = DATA_DIR / 'logs'\n",
-    "TRAIN_DIR = DATA_DIR / 'train'\n",
-    "VAL_DIR = DATA_DIR / 'val'\n",
-    "TEST_DIR = DATA_DIR / 'test'\n",
-    "\n",
-    "BATCH_SIZE = 64\n",
-    "EPOCHS = 1024\n",
-    "VAL_FREQ = 16\n",
-    "\n",
-    "BEST_MODEL = DATA_DIR / \"best_model.h5\"\n",
-    "MODEL_CKPT = DATA_DIR / \"model_ckpt.h5\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Functions"
    ]
   },
@@ -107,7 +82,44 @@
     "    :param desc: run description\n",
     "    :return: log file path with timestamp and optional description\n",
     "    \"\"\"\n",
-    "    return LOG_DIR / time.strftime(f'{desc}_%Y_%m_%d_%H_%M_S')"
+    "    return LOG_DIR / time.strftime(f'{desc}-%Y_%m_%d_%H_%M_%S')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = utils.package_dir() / 'data'/ 'ch10'\n",
+    "LOG_DIR = DATA_DIR / 'logs'\n",
+    "TRAIN_DIR = DATA_DIR / 'train'\n",
+    "VAL_DIR = DATA_DIR / 'val'\n",
+    "TEST_DIR = DATA_DIR / 'test'\n",
+    "\n",
+    "BATCH_SIZE = 32\n",
+    "DROPOUT_P = 0.45\n",
+    "EPOCHS = 10000\n",
+    "VAL_FREQ = 512 // BATCH_SIZE\n",
+    "\n",
+    "best_model = 'best_model.h5'\n",
+    "model_ckpt = 'model_ckpt.h5'\n",
+    "\n",
+    "RUN_DIR = get_run_logdir(f'baseline_cnn-batch_{BATCH_SIZE}')\n",
+    "PLOTS_DIR = RUN_DIR / 'plots'\n",
+    "BEST_MODEL = RUN_DIR / best_model\n",
+    "MODEL_CKPT = RUN_DIR / model_ckpt\n",
+    "\n",
+    "PREVIOUS_RUN = LOG_DIR / 'baseline_cnn-batch_32-2020_11_26_17_02_23'\n",
+    "PREVIOUS_BEST_MODEL = PREVIOUS_RUN / best_model\n",
+    "PREVIOUS_MODEL_CKPT = PREVIOUS_RUN / model_ckpt"
    ]
   },
   {
@@ -115,7 +127,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Load Data"
+    "## Load Data\n",
+    "[Fashion MNIST Dataset](https://keras.io/api/datasets/fashion_mnist/)"
    ]
   },
   {
@@ -129,34 +142,6 @@
     "    )\n",
     "print(f'Train Shape: {x_train_full.shape}')\n",
     "print(f'Train Data Type: {x_train_full.dtype}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classes = (\n",
-    "    't-shirt_top',\n",
-    "    'trouser',\n",
-    "    'pullover',\n",
-    "    'dress',\n",
-    "    'coat',\n",
-    "    'sandal',\n",
-    "    'shirt',\n",
-    "    'sneaker',\n",
-    "    'bag',\n",
-    "    'ankle_boot',\n",
-    "    )\n",
-    "classes_idx = {n: v for n, v in enumerate(classes)}"
    ]
   },
   {
@@ -185,6 +170,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = (\n",
+    "    't-shirt_top',\n",
+    "    'trouser',\n",
+    "    'pullover',\n",
+    "    'dress',\n",
+    "    'coat',\n",
+    "    'sandal',\n",
+    "    'shirt',\n",
+    "    'sneaker',\n",
+    "    'bag',\n",
+    "    'ankle_boot',\n",
+    "    )\n",
+    "CLASSES_IDX = {n: v for n, v in enumerate(classes)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Check Distributions"
    ]
   },
@@ -204,8 +217,8 @@
     "    title_text='Dataset Distributions',\n",
     "    xaxis=dict(\n",
     "        title='Class',\n",
-    "        tickvals=tuple(classes_idx.keys()),\n",
-    "        ticktext=tuple(classes_idx.values()),\n",
+    "        tickvals=tuple(CLASSES_IDX.keys()),\n",
+    "        ticktext=tuple(CLASSES_IDX.values()),\n",
     "    ),\n",
     "    yaxis_title_text='Count',\n",
     "    bargroupgap=0.1,\n",
@@ -269,13 +282,13 @@
     "    print(f'Saving Dataset Images: {directory}')\n",
     "    # create directories\n",
     "    for label in np.unique(y):\n",
-    "        (directory / classes_idx[label]).mkdir(parents=True,\n",
+    "        (directory / CLASSES_IDX[label]).mkdir(parents=True,\n",
     "                                               exist_ok=True)\n",
     "    # save images\n",
     "    with concurrent.futures.ProcessPoolExecutor() as pool:\n",
     "        futures = []\n",
     "        for im, label in zip(x, y):\n",
-    "            path = (directory / classes_idx[label]\n",
+    "            path = (directory / CLASSES_IDX[label]\n",
     "                    / f'{hashlib.sha256(im).hexdigest()}.png')\n",
     "            if not path.is_file():\n",
     "                futures.append(pool.submit(cv2.imwrite, str(path), im))\n",
@@ -316,6 +329,7 @@
     "    shuffle=True,\n",
     "    target_size=(28, 28),\n",
     "    )\n",
+    "train_classes = {v: k for k, v in train_data_gen.class_indices.items()}\n",
     "\n",
     "val_data_gen = im_gen_val.flow_from_directory(\n",
     "    VAL_DIR,\n",
@@ -325,6 +339,7 @@
     "    seed=42,\n",
     "    target_size=(28, 28),\n",
     "    )\n",
+    "val_classes = {v: k for k, v in val_data_gen.class_indices.items()}\n",
     "\n",
     "test_data_gen = im_gen_val.flow_from_directory(\n",
     "    TEST_DIR,\n",
@@ -350,11 +365,10 @@
    "outputs": [],
    "source": [
     "x, y = next(train_data_gen)\n",
-    "data_gen_classes = {v: k for k, v in train_data_gen.class_indices.items()}\n",
     "for n in range(10):\n",
     "    ax = plt.subplot(2, 5, n + 1)\n",
     "    ax.imshow(x[n], cmap='gray')\n",
-    "    ax.set_title(data_gen_classes[y[n]])\n",
+    "    ax.set_title(train_classes[y[n]])\n",
     "    ax.axis('off')"
    ]
   },
@@ -378,13 +392,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_model = tf.keras.Sequential([\n",
-    "    InputLayer(input_shape=(28, 28, 1)),\n",
-    "    Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
-    "    Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu'),\n",
-    "    Flatten(),\n",
-    "    Dense(10, activation='softmax'),\n",
-    "    ])"
+    "# model = tf.keras.Sequential([\n",
+    "#     InputLayer(input_shape=(28, 28, 1)),\n",
+    "#     Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+    "#     Dropout(DROPOUT_P),\n",
+    "#     Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+    "#     Dropout(DROPOUT_P),\n",
+    "#     Flatten(),\n",
+    "#     Dense(10, activation='softmax'),\n",
+    "#     ])"
    ]
   },
   {
@@ -402,13 +418,11 @@
    "outputs": [],
    "source": [
     "input_0 = Input(shape=(28, 28, 1), name='input_0')\n",
-    "hidden_1 = Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu',\n",
-    "                  name='hidden_1')(input_0)\n",
-    "hidden_2 = Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu',\n",
-    "                  name='hidden_2')(hidden_1)\n",
-    "flatten = Flatten(name='flatten')(hidden_2)\n",
-    "output = Dense(10, activation='softmax', name='output')(flatten)\n",
-    "func_model = tf.keras.Model(inputs=[input_0], outputs=[output])"
+    "hidden_0 = Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu')(input_0)\n",
+    "hidden_1 = Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu')(hidden_0)\n",
+    "flatten_1 = Flatten()(hidden_1)\n",
+    "output_0 = Dense(10, activation='softmax', name='output_0')(flatten_1)\n",
+    "model = tf.keras.Model(inputs=[input_0], outputs=[output_0])"
    ]
   },
   {
@@ -444,13 +458,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = seq_model\n",
-    "model = func_model\n",
-    "\n",
-    "if BEST_MODEL.exists():\n",
-    "    model = tf.keras.models.load_model(BEST_MODEL)\n",
-    "elif MODEL_CKPT.exists():\n",
-    "    model = tf.keras.models.load_model(MODEL_CKPT)\n",
+    "if PREVIOUS_BEST_MODEL.exists():\n",
+    "    model = tf.keras.models.load_model(PREVIOUS_BEST_MODEL)\n",
+    "elif PREVIOUS_MODEL_CKPT.exists():\n",
+    "    model = tf.keras.models.load_model(PREVIOUS_MODEL_CKPT)\n",
     "\n",
     "compile_model(model)"
    ]
@@ -462,15 +473,6 @@
    "outputs": [],
    "source": [
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.keras.utils.plot_model(model, to_file=DATA_DIR / 'model_plot.png')"
    ]
   },
   {
@@ -503,10 +505,10 @@
     "    if epoch > 0 and epoch % VAL_FREQ == 0:\n",
     "        predict = np.argmax(model.predict(val_data_gen), axis=1)\n",
     "        cm = tf.math.confusion_matrix(val_data_gen.classes, predict)\n",
-    "        fig = confusion_matrix_fig(cm, classes_idx)\n",
-    "        cm_image = static_image(fig)\n",
+    "        fig = confusion_matrix_fig(cm, CLASSES_IDX)\n",
+    "        cm_image = plotly_static_image(fig)\n",
     "\n",
-    "        file_writer = tf.summary.create_file_writer(str(LOG_DIR / 'cm'))\n",
+    "        file_writer = tf.summary.create_file_writer(str(PLOTS_DIR / 'cm'))\n",
     "        with file_writer.as_default():\n",
     "            tf.summary.image(\"Confusion Matrix\", cm_image, epoch)\n",
     "\n",
@@ -547,15 +549,14 @@
     "    return fig\n",
     "\n",
     "\n",
-    "def static_image(fig, channels: int = 1):\n",
+    "def plotly_static_image(fig):\n",
     "    \"\"\"\n",
     "    Convert Plotly figure to a static image.\n",
     "    \n",
     "    :param fig: Plotyly figure\n",
-    "    :param channels: number of channels in figure\n",
     "    \"\"\"\n",
     "    im_bytes = fig.to_image(format='png')\n",
-    "    tf_im = tf.image.decode_png(im_bytes, channels)\n",
+    "    tf_im = tf.image.decode_png(im_bytes, 3)\n",
     "    return tf.expand_dims(tf_im, 0)"
    ]
   },
@@ -572,7 +573,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "def log_prediction_examples(epoch, logs=None):\n",
+    "    \"\"\"Save prediction examples to be displayed in TensorBoard.\"\"\"\n",
+    "    if epoch > 0 and epoch % VAL_FREQ == 0:\n",
+    "        fig = prediction_examples_fig()\n",
+    "        im = pyplot_static_image(fig)\n",
+    "\n",
+    "        file_writer = (\n",
+    "            tf.summary.create_file_writer(str(PLOTS_DIR / 'predictions'))\n",
+    "            )\n",
+    "        with file_writer.as_default():\n",
+    "            tf.summary.image(\"Predictions\", im, epoch)\n",
+    "    \n",
+    "\n",
+    "def prediction_examples_fig(n_examples: int = BATCH_SIZE):\n",
+    "    \"\"\"\n",
+    "    Image and prediction percentages.\n",
+    "    \n",
+    "    :param n_examples: number of images to evaluate\n",
+    "    \"\"\"\n",
+    "    n_examples = n_examples if n_examples <= BATCH_SIZE else BATCH_SIZE\n",
+    "    cols = 2\n",
+    "    rows = int(np.ceil(n_examples / cols))\n",
+    "    fig = plt.figure(figsize=(8 * cols, 4 * rows))\n",
+    "    outer = gridspec.GridSpec(rows, cols, wspace=0.4, hspace=0.4)\n",
+    "    \n",
+    "    x, y = next(val_data_gen)\n",
+    "    predict = model.predict((x, y))\n",
+    "    y_hat = np.argmax(predict, axis=1)\n",
+    "\n",
+    "    for n in range(n_examples):\n",
+    "        inner = gridspec.GridSpecFromSubplotSpec(\n",
+    "            1, 2, subplot_spec=outer[n], wspace=0.1, hspace=0.1)\n",
+    "        \n",
+    "        # Image\n",
+    "        ax = plt.Subplot(fig, inner[0])\n",
+    "        ax.imshow(x[n], cmap='gray')\n",
+    "        title = f'{val_classes[y_hat[n]]} {predict[n].max():.0%}'\n",
+    "        if y_hat[n] == y[n]:\n",
+    "            color = 'blue'\n",
+    "        else:\n",
+    "            color = 'red'\n",
+    "            title = title + f'\\nActual: {val_classes[y[n]]}'\n",
+    "        ax.set_title(title, fontsize=20, color=color)\n",
+    "        ax.axis('off')\n",
+    "        fig.add_subplot(ax)\n",
+    "        \n",
+    "        # Predictions\n",
+    "        ax = plt.Subplot(fig, inner[1])        \n",
+    "        bar = ax.bar(range(10), predict[n], color='grey')\n",
+    "        bar[y_hat[n]].set_color('red')\n",
+    "        bar[int(y[n])].set_color('blue')\n",
+    "        ax.set_title(f'Example: {n}', fontsize=20, color=color)\n",
+    "        ax.axis('off')\n",
+    "        ax.set_ylim([0, 1])\n",
+    "        fig.add_subplot(ax)\n",
+    "            \n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def pyplot_static_image(fig):\n",
+    "    \"\"\"\n",
+    "    Convert Matplotlib pyplot figure to a static image.\n",
+    "    \n",
+    "    :param fig: pyplot figure\n",
+    "    \"\"\"\n",
+    "    buf = io.BytesIO()\n",
+    "    fig.savefig(buf, format='png')\n",
+    "    plt.close(fig)\n",
+    "    buf.seek(0)\n",
+    "    tf_im = tf.image.decode_png(buf.getvalue(), 3)\n",
+    "    return tf.expand_dims(tf_im, 0)"
    ]
   },
   {
@@ -621,9 +692,11 @@
     "    restore_best_weights=True,\n",
     "    )\n",
     "\n",
-    "tensorboard_cb = tf.keras.callbacks.TensorBoard(\n",
-    "    get_run_logdir('baseline_cnn')\n",
-    "    )"
+    "prediction_examples_cb = tf.keras.callbacks.LambdaCallback(\n",
+    "    on_epoch_end=log_prediction_examples\n",
+    "    )\n",
+    "\n",
+    "tensorboard_cb = tf.keras.callbacks.TensorBoard(RUN_DIR)"
    ]
   },
   {
@@ -647,7 +720,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "history = model.fit(\n",
@@ -660,6 +735,7 @@
     "        checkpoint_cb,\n",
     "        confusion_matrix_cb,\n",
     "        early_stopping_cb,\n",
+    "        prediction_examples_cb,\n",
     "        tensorboard_cb,\n",
     "    ],\n",
     "    steps_per_epoch=2 * len(train_data_gen) // BATCH_SIZE,\n",
@@ -699,6 +775,22 @@
    "outputs": [],
    "source": [
     "model.save(BEST_MODEL, save_format='h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Model Diagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(model, to_file=RUN_DIR / 'model_plot.png')"
    ]
   },
   {
