ENH: add resizing and augmentation as model layers

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras-prefetch.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras-prefetch.ipynb
@@ -6,6 +6,14 @@
    "source": [
     "# Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow\n",
     "## Chapter 10 - Introduction to Artificial Neural Networks with Keras\n",
+    "\n",
+    "<br>\n",
+    "<font color='red'>\n",
+    "    This notebook incorporates preprocessing and augmentation into the model and uses prefetching in the pipeline.\n",
+    "    If a GPU was available this would greatly reduce training time.\n",
+    "    Without a GPU this configuration actually slows down training.\n",
+    "</font>\n",
+    "\n",
     "### Imports"
    ]
   },
@@ -32,8 +40,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds\n",
-    "import tensorflow.keras.layers\n",
+    "import tensorflow.keras.layers as layers\n",
     "\n",
     "from tensorflow_2 import utils"
    ]
@@ -120,7 +127,8 @@
     "BEST_MODEL = RUN_DIR / best_model\n",
     "MODEL_CKPT = RUN_DIR / model_ckpt\n",
     "\n",
-    "PREVIOUS_RUN = LOG_DIR / 'baseline_cnn-batch_32-2020_11_26_17_02_23'\n",
+    "restart = ''\n",
+    "PREVIOUS_RUN = LOG_DIR / restart\n",
     "PREVIOUS_BEST_MODEL = PREVIOUS_RUN / best_model\n",
     "PREVIOUS_MODEL_CKPT = PREVIOUS_RUN / model_ckpt"
    ]
@@ -303,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Image Size"
+    "### Get Image Shape and Scale Factor"
    ]
   },
   {
@@ -316,6 +324,7 @@
     "    if x.suffix == '.png':\n",
     "        im = cv2.imread(str(x))\n",
     "        IM_HEIGHT, IM_WIDTH, IM_CHANNELS = im.shape\n",
+    "        IM_SCALE_FACTOR = 1. / np.iinfo(im.dtype).max\n",
     "        break"
    ]
   },
@@ -338,7 +347,6 @@
     "    label_mode='int',\n",
     "    color_mode='grayscale',\n",
     "    batch_size=BATCH_SIZE,\n",
-    "#     image_size=(IM_HEIGHT, IM_WIDTH),  # TODO: add Resizing layer to model\n",
     "    seed=42,\n",
     "    shuffle=True,\n",
     "    )\n",
@@ -350,7 +358,6 @@
     "    label_mode='int',\n",
     "    color_mode='grayscale',\n",
     "    batch_size=BATCH_SIZE,\n",
-    "#     image_size=(IM_HEIGHT, IM_WIDTH),\n",
     "    seed=42,\n",
     "    shuffle=True,\n",
     "    )\n",
@@ -362,7 +369,6 @@
     "    label_mode='int',\n",
     "    color_mode='grayscale',\n",
     "    batch_size=BATCH_SIZE,\n",
-    "#     image_size=(IM_HEIGHT, IM_WIDTH),\n",
     "    seed=42,\n",
     "    shuffle=True,\n",
     "    )\n",
@@ -391,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize Data"
+    "### Visualize Raw Data"
    ]
   },
   {
@@ -400,122 +406,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = next(iter(train_data.take(1)))\n",
+    "image, label = next(iter(train_data.take(1)))\n",
     "for n in range(10):\n",
     "    ax = plt.subplot(2, 5, n + 1)\n",
-    "    ax.imshow(x[n], cmap='gray')\n",
-    "    ax.set_title(train_classes[y[n]])\n",
-    "    ax.axis('off')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create Data Generators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scale_factor = 1 / np.iinfo(x_train.dtype).max\n",
-    "\n",
-    "im_gen_train = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "    horizontal_flip=True,\n",
-    "    rescale=scale_factor,\n",
-    "    )\n",
-    "\n",
-    "im_gen_val = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "    rescale=scale_factor,\n",
-    "    )\n",
-    "\n",
-    "train_data_gen = im_gen_train.flow_from_directory(\n",
-    "    TRAIN_DIR,\n",
-    "    batch_size=BATCH_SIZE,\n",
-    "    color_mode='grayscale',\n",
-    "    class_mode='sparse',\n",
-    "    seed=42,\n",
-    "    shuffle=True,\n",
-    "    target_size=(28, 28),\n",
-    "    )\n",
-    "train_classes = {v: k for k, v in train_data_gen.class_indices.items()}\n",
-    "\n",
-    "val_data_gen = im_gen_val.flow_from_directory(\n",
-    "    VAL_DIR,\n",
-    "    batch_size=BATCH_SIZE,\n",
-    "    color_mode='grayscale',\n",
-    "    class_mode='sparse',\n",
-    "    seed=42,\n",
-    "    target_size=(28, 28),\n",
-    "    )\n",
-    "val_classes = {v: k for k, v in val_data_gen.class_indices.items()}\n",
-    "\n",
-    "test_data_gen = im_gen_val.flow_from_directory(\n",
-    "    TEST_DIR,\n",
-    "    batch_size=BATCH_SIZE,\n",
-    "    color_mode='grayscale',\n",
-    "    class_mode='sparse',\n",
-    "    seed=42,\n",
-    "    target_size=(28, 28),\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Visualize Preprocessed Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = next(train_data_gen)\n",
-    "for n in range(10):\n",
-    "    ax = plt.subplot(2, 5, n + 1)\n",
-    "    ax.imshow(x[n], cmap='gray')\n",
-    "    ax.set_title(train_classes[y[n]])\n",
+    "    ax.imshow(image[n], cmap='gray')\n",
+    "    ax.set_title(train_classes[label[n]])\n",
     "    ax.axis('off')"
    ]
   },
@@ -530,7 +425,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sequential Model"
+    "### Preprocessing Layers\n",
+    "Reference:\n",
+    "[Keras Preproccessing](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing)\n",
+    "\n",
+    "<br>\n",
+    "<font color='red'>\n",
+    "    WARNING: If the Rescaling factor is not a float the tensor is resized.\n",
+    "</font>"
    ]
   },
   {
@@ -539,15 +441,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = tf.keras.Sequential([\n",
-    "#     InputLayer(input_shape=(28, 28, 1)),\n",
-    "#     Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
-    "#     Dropout(DROPOUT_P),\n",
-    "#     Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu'),\n",
-    "#     Dropout(DROPOUT_P),\n",
-    "#     Flatten(),\n",
-    "#     Dense(10, activation='softmax'),\n",
-    "#     ])"
+    "preprocessing = tf.keras.Sequential([\n",
+    "    layers.experimental.preprocessing.Resizing(IM_HEIGHT, IM_WIDTH),\n",
+    "    layers.experimental.preprocessing.Rescaling(IM_SCALE_FACTOR),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = preprocessing(image)\n",
+    "for n in range(10):\n",
+    "    ax = plt.subplot(2, 5, n + 1)\n",
+    "    ax.imshow(result[n], cmap='gray')\n",
+    "    ax.set_title(train_classes[label[n]])\n",
+    "    ax.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Augmentation Layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "augmentation = tf.keras.Sequential([\n",
+    "    layers.experimental.preprocessing.RandomFlip('horizontal'),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize Augmentation\n",
+    "`tf.expand_dims` is called to add the test image to a batch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = augmentation(preprocessing(image))\n",
+    "for n in range(10):\n",
+    "    ax = plt.subplot(2, 5, n + 1)\n",
+    "    ax.imshow(result[n], cmap='gray')\n",
+    "    ax.set_title(train_classes[label[n]])\n",
+    "    ax.axis('off')"
    ]
   },
   {
@@ -564,11 +522,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_0 = Input(shape=(28, 28, 1), name='input_0')\n",
-    "hidden_0 = Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu')(input_0)\n",
-    "hidden_1 = Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu')(hidden_0)\n",
-    "flatten_1 = Flatten()(hidden_1)\n",
-    "output_0 = Dense(10, activation='softmax', name='output_0')(flatten_1)\n",
+    "input_0 = layers.Input(shape=(256, 256, 1), name='input_0')\n",
+    "x = preprocessing(input_0)\n",
+    "x = augmentation(x)\n",
+    "x = layers.Conv2D(\n",
+    "    filters=32, kernel_size=3, strides=(2, 2), activation='relu')(x)\n",
+    "x = layers.Conv2D(\n",
+    "    filters=64, kernel_size=3, strides=(2, 2), activation='relu')(x)\n",
+    "x = layers.Flatten()(x)\n",
+    "output_0 = layers.Dense(10, activation='softmax', name='output_0')(x)\n",
     "model = tf.keras.Model(inputs=[input_0], outputs=[output_0])"
    ]
   },
@@ -647,11 +609,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: make sure new generator is compatible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def log_confusion_matrix(epoch, logs=None):\n",
     "    \"\"\"Save confussion matrix to be displayed in TensorBoard.\"\"\"\n",
     "    if epoch > 0 and epoch % VAL_FREQ == 0:\n",
-    "        predict = np.argmax(model.predict(val_data_gen), axis=1)\n",
-    "        cm = tf.math.confusion_matrix(val_data_gen.classes, predict)\n",
+    "        predict = np.argmax(model.predict(val_data), axis=1)\n",
+    "        cm = tf.math.confusion_matrix(val_data.classes, predict)\n",
     "        fig = confusion_matrix_fig(cm, CLASSES_IDX)\n",
     "        cm_image = plotly_static_image(fig)\n",
     "\n",
@@ -717,6 +688,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: make sure new generator is compatible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,11 +782,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 1773), started 0:14:42 ago. (Use '!kill 1773' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-a5ec8bb1796b4edf\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-a5ec8bb1796b4edf\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%tensorboard --logdir $LOG_DIR --port=6006"
    ]
@@ -820,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,22 +886,41 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10000\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
+      "Instructions for updating:\n",
+      "use `tf.profiler.experimental.stop` instead.\n",
+      "Epoch 2/10000\n",
+      "Epoch 3/10000\n",
+      "Epoch 4/10000\n",
+      "Epoch 5/10000\n",
+      "Epoch 6/10000\n",
+      "Epoch 7/10000\n",
+      "Epoch 8/10000\n",
+      "Epoch 9/10000\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(\n",
-    "    train_data_gen,\n",
+    "    train_data,\n",
     "    epochs=EPOCHS,\n",
     "    verbose=4,\n",
-    "    validation_data=val_data_gen,\n",
+    "    validation_data=val_data,\n",
     "    validation_freq=VAL_FREQ,\n",
     "    callbacks=[\n",
     "        checkpoint_cb,\n",
-    "        confusion_matrix_cb,\n",
+    "#         confusion_matrix_cb,\n",
     "        early_stopping_cb,\n",
-    "        prediction_examples_cb,\n",
+    "#         prediction_examples_cb,\n",
     "        tensorboard_cb,\n",
     "    ],\n",
-    "    steps_per_epoch=2 * len(train_data_gen) // BATCH_SIZE,\n",
+    "    steps_per_epoch=2 * len(train_data) // BATCH_SIZE,\n",
     "    workers=2,\n",
     "    use_multiprocessing=False,\n",
     "    )"
