ENH: update callbacks for data generator

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras-prefetch.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras-prefetch.ipynb
@@ -11,7 +11,6 @@
     "<font color='red'>\n",
     "    This notebook incorporates preprocessing and augmentation into the model and uses prefetching in the pipeline.\n",
     "    If a GPU was available this would greatly reduce training time.\n",
-    "    Without a GPU this configuration actually slows down training.\n",
     "</font>\n",
     "\n",
     "### Imports"
@@ -115,7 +114,6 @@
     "TEST_DIR = DATA_DIR / 'test'\n",
     "\n",
     "BATCH_SIZE = 32\n",
-    "DROPOUT_P = 0.45\n",
     "EPOCHS = 10000\n",
     "VAL_FREQ = 512 // BATCH_SIZE\n",
     "\n",
@@ -358,10 +356,9 @@
     "    label_mode='int',\n",
     "    color_mode='grayscale',\n",
     "    batch_size=BATCH_SIZE,\n",
-    "    seed=42,\n",
-    "    shuffle=True,\n",
     "    )\n",
     "val_classes = val_data.class_names\n",
+    "val_idx = {n: k for n, k in enumerate(val_classes)}\n",
     "\n",
     "test_data = tf.keras.preprocessing.image_dataset_from_directory(\n",
     "    TEST_DIR,\n",
@@ -369,8 +366,6 @@
     "    label_mode='int',\n",
     "    color_mode='grayscale',\n",
     "    batch_size=BATCH_SIZE,\n",
-    "    seed=42,\n",
-    "    shuffle=True,\n",
     "    )\n",
     "test_classes = test_data.class_names"
    ]
@@ -379,7 +374,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configure Prefetching"
+    "### Configure Prefetching\n",
+    "\n",
+    "<br>\n",
+    "<font color='red'>\n",
+    "    WARNING:<br>\n",
+    "    Do not use the cache transformation.\n",
+    "    Once the cache consumes all the memory train will be crash.\n",
+    "</font>"
    ]
   },
   {
@@ -388,9 +390,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = train_data.cache().prefetch(buffer_size=AUTOTUNE)\n",
-    "val_data = val_data.cache().prefetch(buffer_size=AUTOTUNE)\n",
-    "test_data = test_data.cache().prefetch(buffer_size=AUTOTUNE)"
+    "train_data = train_data.repeat().prefetch(buffer_size=AUTOTUNE)\n",
+    "val_data = val_data.prefetch(buffer_size=AUTOTUNE)\n",
+    "test_data = test_data.prefetch(buffer_size=AUTOTUNE)"
    ]
   },
   {
@@ -609,21 +611,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: make sure new generator is compatible"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def log_confusion_matrix(epoch, logs=None):\n",
     "    \"\"\"Save confussion matrix to be displayed in TensorBoard.\"\"\"\n",
     "    if epoch > 0 and epoch % VAL_FREQ == 0:\n",
-    "        predict = np.argmax(model.predict(val_data), axis=1)\n",
-    "        cm = tf.math.confusion_matrix(val_data.classes, predict)\n",
-    "        fig = confusion_matrix_fig(cm, CLASSES_IDX)\n",
+    "        predict = np.array([])\n",
+    "        labels = np.array([])\n",
+    "        for im, label in val_data:\n",
+    "            predict = np.concatenate([predict, np.argmax(model.predict(im), axis=1)])\n",
+    "            labels = np.concatenate([labels, label])\n",
+    "        cm = tf.math.confusion_matrix(labels, predict)\n",
+    "        fig = confusion_matrix_fig(cm, val_idx)\n",
     "        cm_image = plotly_static_image(fig)\n",
     "\n",
     "        file_writer = tf.summary.create_file_writer(str(PLOTS_DIR / 'cm'))\n",
@@ -691,15 +688,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: make sure new generator is compatible"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def log_prediction_examples(epoch, logs=None):\n",
     "    \"\"\"Save prediction examples to be displayed in TensorBoard.\"\"\"\n",
     "    if epoch > 0 and epoch % VAL_FREQ == 0:\n",
@@ -725,7 +713,7 @@
     "    fig = plt.figure(figsize=(8 * cols, 4 * rows))\n",
     "    outer = gridspec.GridSpec(rows, cols, wspace=0.4, hspace=0.4)\n",
     "    \n",
-    "    x, y = next(val_data_gen)\n",
+    "    x, y = next(iter(val_data.take(1)))\n",
     "    predict = model.predict((x, y))\n",
     "    y_hat = np.argmax(predict, axis=1)\n",
     "\n",
@@ -782,47 +770,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 1773), started 0:14:42 ago. (Use '!kill 1773' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-a5ec8bb1796b4edf\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-a5ec8bb1796b4edf\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%tensorboard --logdir $LOG_DIR --port=6006"
    ]
@@ -836,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +803,7 @@
     "\n",
     "early_stopping_cb = tf.keras.callbacks.EarlyStopping(\n",
     "    monitor='loss',\n",
-    "    patience=16,\n",
+    "    patience=8,\n",
     "    restore_best_weights=True,\n",
     "    )\n",
     "\n",
@@ -886,41 +838,22 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10000\n",
-      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/summary_ops_v2.py:1277: stop (from tensorflow.python.eager.profiler) is deprecated and will be removed after 2020-07-01.\n",
-      "Instructions for updating:\n",
-      "use `tf.profiler.experimental.stop` instead.\n",
-      "Epoch 2/10000\n",
-      "Epoch 3/10000\n",
-      "Epoch 4/10000\n",
-      "Epoch 5/10000\n",
-      "Epoch 6/10000\n",
-      "Epoch 7/10000\n",
-      "Epoch 8/10000\n",
-      "Epoch 9/10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history = model.fit(\n",
     "    train_data,\n",
     "    epochs=EPOCHS,\n",
-    "    verbose=4,\n",
+    "    verbose=1,\n",
     "    validation_data=val_data,\n",
     "    validation_freq=VAL_FREQ,\n",
     "    callbacks=[\n",
     "        checkpoint_cb,\n",
-    "#         confusion_matrix_cb,\n",
+    "        confusion_matrix_cb,\n",
     "        early_stopping_cb,\n",
-    "#         prediction_examples_cb,\n",
+    "        prediction_examples_cb,\n",
     "        tensorboard_cb,\n",
     "    ],\n",
-    "    steps_per_epoch=2 * len(train_data) // BATCH_SIZE,\n",
+    "    steps_per_epoch=BATCH_SIZE * 8,\n",
     "    workers=2,\n",
     "    use_multiprocessing=False,\n",
     "    )"
@@ -940,7 +873,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.evaluate(test_data_gen)"
+    "model.evaluate(test_data)"
    ]
   },
   {
@@ -979,7 +912,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Model"
+    "## Load Model\n",
+    "\n",
+    "<br>\n",
+    "<font color='red'>\n",
+    "    WARNING:<br>\n",
+    "    With the current version of Keras if a saved model is loaded and not compiled inference scores are random.\n",
+    "</font>"
    ]
   },
   {
@@ -1005,7 +944,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model.evaluate(test_data_gen)"
+    "best_model.evaluate(test_data)"
    ]
   }
  ],
